# bouncy

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
assets/: tui-demo.tape
bench/webarena/: Cargo.toml  README.md  tasks.example.json
bench/webarena/src/: agent.rs  fixture.rs  judge.rs  lib.rs  llm.rs  main.rs  task.rs  tools.rs  webarena.rs
bench/webarena/tests/: agent_smoke.rs
crates/bouncy/: CHANGELOG.md  Cargo.toml  README.md
crates/bouncy-browse/: CHANGELOG.md  Cargo.toml
crates/bouncy-browse/src/: lib.rs  session.rs  snapshot.rs
crates/bouncy-browse/tests/: e2e.rs  session_flows.rs  submit_flows.rs
crates/bouncy-cdp/: CHANGELOG.md  Cargo.toml
crates/bouncy-cdp/src/: lib.rs
crates/bouncy-cdp/tests/: evaluate.rs
crates/bouncy-cli/: CHANGELOG.md  Cargo.toml
crates/bouncy-cli/src/: browse.rs  main.rs  scrape.rs  scrape_tui.rs  select.rs
crates/bouncy-cli/tests/: cli.rs  cli_browse.rs  cli_select.rs  e2e.rs
crates/bouncy-dom/: CHANGELOG.md  Cargo.toml
crates/bouncy-dom/src/: lib.rs
crates/bouncy-dom/tests/: nodeid.rs  parse.rs
crates/bouncy-extract/: CHANGELOG.md  Cargo.toml
crates/bouncy-extract/src/: lib.rs
crates/bouncy-extract/tests/: extract.rs
crates/bouncy-fetch/: CHANGELOG.md  Cargo.toml
crates/bouncy-fetch/benches/: fetch_vs_reqwest.rs
crates/bouncy-fetch/src/: lib.rs
crates/bouncy-fetch/tests/: blocklist.rs  compression.rs  cookie_jar.rs  custom_ca.rs  get.rs  proxy.rs  redirects.rs  request.rs  timeout.rs  user_agent.rs
crates/bouncy-js/: CHANGELOG.md  Cargo.toml  build.rs
crates/bouncy-js/js/: bootstrap.js
crates/bouncy-js/src/: bridge.rs  lib.rs  runtime.rs
crates/bouncy-js/tests/: cookies.rs  eval.rs  fetch.rs  location.rs  page_lifecycle.rs  polyfills.rs  runtime.rs  stealth.rs  web_api.rs
crates/bouncy-mcp/: CHANGELOG.md  Cargo.toml
crates/bouncy-mcp/src/: browse_store.rs  error.rs  glue.rs  lib.rs  main.rs  server.rs  tools.rs
crates/bouncy-mcp/tests/: browse_store.rs  smoke.rs
crates/bouncy/src/: lib.rs
crates/bouncy/tests/: reexports.rs
docs/: RELEASE.md
promo/: README.md  comments-prep.md  demo.sh  demo.tape  show-hn.md
