[package]
name = "bouncy-bench-webarena"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "WebArena-shaped agent-loop harness for bouncy. Drives Claude through bouncy_browse_* primitives against a task suite and reports success rate + wall-clock. Not published; lives in the repo as a leaderboard-submission scaffold."

[[bin]]
name = "bouncy-bench-webarena"
path = "src/main.rs"

[dependencies]
bouncy-browse = { path = "../../crates/bouncy-browse" }
tokio = { workspace = true, features = ["net"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
async-trait = "0.1"
# Minimal HTTP client for the Anthropic API + the in-process
# fixture server. The workspace `hyper` dep is client-only; this
# crate also needs `server` for the fixture, so we enable it here
# rather than amending the workspace.
hyper = { version = "1", default-features = false, features = ["client", "server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["server", "server-auto"] }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
