[package]
name = "bouncy-browse"
version = "0.1.10"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Stateful browser primitives for bouncy: open / click / fill / submit / read with structured page snapshots. Powers `bouncy browse` and the `bouncy_browse_*` MCP tools."

[lib]
path = "src/lib.rs"

[features]
# Real-network smoke tests. Off by default so `cargo test` runs offline.
# Enable with `cargo test -p bouncy-browse --features e2e --test e2e`.
e2e = []

[dependencies]
bouncy-js = { path = "../bouncy-js", version = "0.1.10" }
bouncy-fetch = { path = "../bouncy-fetch", version = "0.1.10" }
bouncy-dom = { path = "../bouncy-dom", version = "0.1.10" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
