[package]
name = "bouncy-cli"
version = "0.1.9"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tiny Rust headless browser. Scrape pages or drive multi-step browse sessions (click / fill / submit / read) from the CLI. Same workspace also ships an MCP server (bouncy-mcp) for LLM-driven autonomous browsing."

[[bin]]
name = "bouncy"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:indexmap"]
# Real-network E2E tests. Off by default so `cargo test` in CI doesn't
# require internet access. Enable with `cargo test --features e2e`.
e2e = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

[dependencies]
bouncy-fetch = { path = "../bouncy-fetch", version = "0.1.9" }
bouncy-extract = { path = "../bouncy-extract", version = "0.1.9" }
bouncy-js = { path = "../bouncy-js", version = "0.1.9" }
bouncy-cdp = { path = "../bouncy-cdp", version = "0.1.9" }
bouncy-dom = { path = "../bouncy-dom", version = "0.1.9" }
bouncy-browse = { path = "../bouncy-browse", version = "0.1.9" }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
url = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }
