[package]
name = "bouncy-extract"
version = "0.1.10"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Streaming HTML extractor used by bouncy: titles, text, and links via lol_html."

[dependencies]
lol_html = { workspace = true }
html-escape = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "extract"
harness = false
