[package]
name = "bouncy-fetch"
version = "0.1.8"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP client used by bouncy: pooled hyper + rustls, no reqwest overhead."

[dependencies]
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = "0.8"
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "time", "macros"] }
thiserror = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = "1"
brotli = "8"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util", "sync"] }
hyper = { workspace = true, features = ["server"] }
reqwest = { workspace = true }
criterion = { workspace = true }
futures-util = "0.3"
serde_json = { workspace = true }
# rcgen: pin to ring crypto so we don't pull aws-lc-sys (no C toolchain).
rcgen = { version = "0.14.7", default-features = false, features = ["ring", "pem"] }
# tokio-rustls: pin to ring; aws-lc default would force aws-lc-sys.
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12", "logging"] }

[[bench]]
name = "fetch_vs_reqwest"
harness = false
