[package]
name = "bouncy-mcp"
version = "0.1.7"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server exposing the bouncy headless browser as typed tools to LLM clients."

[[bin]]
name = "bouncy-mcp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
bouncy-fetch = { path = "../bouncy-fetch", version = "0.1.7" }
bouncy-extract = { path = "../bouncy-extract", version = "0.1.7" }
bouncy-js = { path = "../bouncy-js", version = "0.1.7" }
bouncy-dom = { path = "../bouncy-dom", version = "0.1.7" }
bouncy-browse = { path = "../bouncy-browse", version = "0.1.7" }
uuid = { version = "1", features = ["v4"] }
rmcp = { workspace = true, features = ["server", "macros", "transport-io", "schemars"] }
tokio = { workspace = true, features = ["rt", "macros", "time", "io-util", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "process", "time", "io-util", "rt-multi-thread"] }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
